# home-assistant-goodwe-inverter

./: .gitignore  Goodwe_req_res.ipynb  LICENSE  README.md  goodwe_inverter.py  hacs.json  info.md  inverter_scan.py  inverter_test.py  pyproject.toml  run-hass.sh
custom_components/goodwe/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  goodwe_inverter.py  icons.json  manifest.json  number.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py  wakeup.py
custom_components/goodwe/goodwe/: __init__.py  const.py  dt.py  eh.py  es.py  et.py  exceptions.py  goodwe.py  inverter.py  modbus.py  protocol.py  sensor.py  utils.py
custom_components/goodwe/translations/: cs.json  de.json  en.json  es.json  sk.json
custom_components/goodwe_inverter/: __init__.py  goodwe_inverter.py  manifest.json
test_hass/: configuration.yaml
tests/: crc.py
