[tool.poetry]
name = "home-assistant-goodwe-inverter"
version = "1.0.0"
description = "GoodWe Inverter"
authors = [
    "mletenay <mle@whitestein.com>",
    "starkillerOG <starkiller.og@gmail.com>",
    "Cristian Alonso <fizcris@gmail.com>"
]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
homeassistant = ">=2024.1.0"
goodwe = "0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
